--- a/OpenCase_Beta/RUS/banlist.html
+++ b/OpenCase_Beta/RUS/banlist.html
@@ -64,7 +64,7 @@
     </style>
 </head>
 
-<body data-localization='profile'>
+<body data-localization='banlist'>
     <div class="site-overlay"></div>
     <div id="container">
         <div class="navigationBar" data-menu-EN="Banlist" data-menu-RU="Бан-лист"></div>
