--- a/OpenCase_Beta/RUS/chat.html
+++ b/OpenCase_Beta/RUS/chat.html
@@ -38,24 +38,24 @@
     <div class="site-overlay"></div>
     <div class='container' id="container">
         <div class="navigationBar" data-menu-EN="Chat" data-menu-RU="Чат"></div>
-        <div id="login" style='display: none;'>
+        <div id="login" style='display: none;' data-loc-group="login">
             <input type="text" placeholder="Email" id="email"></input>
             <input type="password" placeholder="Password" id="password"></input>
             <input type="text" placeholder="Nickname" id="nickname" class="hide"></input>
             <span id="login-status"></span>
             <div id="login__buttons">
-                <div id='login-buttons-container'><button class="button_blue" onclick="fbProfile.login();" id="loginButton">Sign in</button>
-                <button class="button_blue empty" id="registerButton">Register</button>
+                <div id='login-buttons-container'><button class="button_blue" onclick="fbProfile.login();" id="loginButton" data-loc="sign_in">Sign in</button>
+                <button class="button_blue empty" id="registerButton" data-loc="register">Register</button>
                 </div>
                 <div>
-                    <a href="#" id="forgot-pass">Forgot password?</a>
+                    <a href="#" id="forgot-pass" data-loc="forgot_pass">Forgot password?</a>
                 </div>
             </div>
         </div>
         
         <div class="chat__rooms-container">
             <div class="chat__rooms"></div>
-            <div class="chat__rooms__info"><a href="banlist.html" id="local-banlist">Banlist</a></div>
+            <div class="chat__rooms__info"><a href="banlist.html" data-loc="banlist">Banlist</a></div>
         </div>
     
         <div id="chat">
@@ -63,7 +63,7 @@
             <div class="chat__write">
                 <div class="input-text" contenteditable="true" id="chat__new-message" max="120"></div>
                 <!--<input name="file" type="file" class="cloudinary-fileupload"></input>-->
-                <input class="button_blue" type="button" id="chat__send-new-message" value="Send"/>
+                <input class="button_blue" type="button" id="chat__send-new-message" value="Send"/ data-loc="send_message">
             </div>
         </div>
     </div>
