--- a/OpenCase_Beta/RUS/coinflip.html
+++ b/OpenCase_Beta/RUS/coinflip.html
@@ -33,8 +33,8 @@
 	<div class="site-overlay"></div>
 <div class='container' id="container">
 <div class="navigationBar" data-menu-EN="Coinflip" data-menu-RU="Монетка"></div>
-	<table class='games'>
-		<tr><th id='local-table-players'>Игроки</th><th id='local-table-items'>Предметы</th><th colspan=2 id='local-table-total'>Стоимость</th></tr>
+	<table class='games' data-loc-group="table">
+		<tr><th id='local-table-players' data-loc="players">Players</th><th id='local-table-items' data-loc="items">Items</th><th colspan=2 id='local-table-total' data-loc="worth">Worth</th></tr>
 		<tr id='js-table-loading-gif'><td colspan =4><div class="cssload-container"><div class="cssload-speeding-wheel"></div></div></td></tr>
 	</table>
 
@@ -43,7 +43,7 @@
 		<span id="intentory-Player"></span>
 		<div class="closeInventory"></div>
 		<ul class="inventory inv-price-counter"></ul>
-		<button class="choseItems">Внести</button>
+		<button class="choseItems" data-loc="choose_items">Внести</button>
 	</div>
 
 	<!-- Предметы в игре -->
@@ -66,7 +66,7 @@
 								<span class='game__player__chance'>0%</span>
 							</div></td>
 					</tr></table>
-				<div class='game__start' style='display: none'><span class='game__start__button'>Начать игру</span></div>
+				<div class='game__start' style='display: none'><span class='game__start__button' data-loc="start_game">Start</span></div>
 				<table class="inventory-tables-holder">
 					<tr>
 						<td><table class='bot-inventory'></table></td>
