--- a/OpenCase_Beta/RUS/double.html
+++ b/OpenCase_Beta/RUS/double.html
@@ -38,7 +38,7 @@
 	<div class="site-overlay"></div>
 <div id="container">
 <div class="navigationBar" data-menu-EN="Double" data-menu-RU="Дабл"></div>
-<span id='last_games_text' class='margin-left-body'>Previous numbers:</span>
+<span id='last_games_text' class='margin-left-body' data-loc="previous_numbers">Previous numbers:</span>
 <div class='last-games'></div>
 
 <div class="scrollerContainer">
@@ -49,11 +49,11 @@
 	</div>
 </div>
 <div class='progress big-progress'>
-	<span>Roling in</span>
+	<span data-loc="rolling_in">Roling in</span>
 	<div class='progress-bar' id='progress-countdown'></div>
 </div>
-<span id='balance-text' class='margin-left-body'>Balance:</span> <span id='balance'>0</span>
-<div class='button' id='fillBalance'>Fill up balance</div>
+<span id='balance-text' class='margin-left-body' data-loc="balance">Balance:</span> <span id='balance'>0</span>
+<div class='button' id='fillBalance' data-loc="fill_up_balance">Fill up balance</div>
 <div class="bets">
 <span class='add-to-bet' data-bet='clear'>0</span><span data-bet='1' class='add-to-bet'>+1</span><span data-bet='10' class='add-to-bet'>+10</span><span data-bet='100' class='add-to-bet'>+100</span><span data-bet='1000' class='add-to-bet'>+1000</span><span data-bet='1/2' class='add-to-bet'>1/2</span><span data-bet='x2' class='add-to-bet'>x2</span><span data-bet='max' class='add-to-bet'>Max</span>
 </div>
@@ -81,7 +81,7 @@
 	<span id="intentory-Player"></span>
 	<div class="closeInventory"></div>
 	<ul class="inventory inv-price-counter"></ul>
-	<button class="choseItems">Обменять</button>
+	<button class="choseItems" data-loc="choose_items">Sell</button>
 </div>
 
 </div>
