--- a/OpenCase_Beta/RUS/RPS.html
+++ b/OpenCase_Beta/RUS/RPS.html
@@ -35,28 +35,27 @@
 		<div class='round-count'></div>
 		<div class='hand left' id='js-left-hand'><img src='../images/rps/rock.png' id='js-player-img'></div>
 		<div class='hand right' id='js-right-hand'><img src='../images/rps/rock.png' id='js-comp-img'></div>
-		<div class='status'>Внесите оружие, чтобы начать игру.</div>
+        <div class='status' data-loc-group="status"><span data-loc="start">Add weapons to start a game.</span></div>
 	</div>
-	<div class='count'>
-		<div class='your-score'>Вы <span>0</span></div>
-		<div class='comp-score'>Противник <span>0</span></div>
+	<div class='count' data-loc-group="scores">
+		<div class='your-score' data-loc="you">You <span>0</span></div>
+		<div class='comp-score' data-loc="comp">Opponent <span>0</span></div>
 	</div>
 	<div class='choice' style='display: none'>
-		<span>Выберите камень, ножницы или бумагу</span>
+		<span data-loc="choose_hand">Choose Rock, Paper or Scissors.</span>
 		<button class='choice__hand' data-choice='rock'><div class='hand rock'></div></button>
 		<button class='choice__hand' data-choice='scissors'><div class='hand scissors'></div></button>
 		<button class='choice__hand' data-choice='paper'><div class='hand paper'></div></button>
 	</div>
-	<button class='add-item'>Внести оружие</button>
+	<button class='add-item' data-loc="add_items">Add items</button>
 
 	<ul class='winItems'></ul>
 
 	<!-- Инвентарь -->
 	<div class="inventoryList" style="display: none;">
-		<span id="intentory-Player"></span>
 		<div class="closeInventory"></div>
 		<ul class="inventory"><li></li></ul>
-		<button class="choseItems">Внести</button>
+		<button class="choseItems" data-loc="choose_items">Add selected items</button>
 	</div>
 
 </div>
