--- a/OpenCase_Beta/RUS/about.html
+++ b/OpenCase_Beta/RUS/about.html
@@ -51,39 +51,38 @@
     </style>
     <div class="site-overlay"></div>
     <div id="container">
-        <div class="navigationBar" data-menu-EN="About" data-menu-RU="О программе"></div>
+        <div class="navigationBar"></div>
         <div id="about">
-            <h3><span id='developer'>Главный разработчик</span></h3> VLADOS776
+            <h3><span data-loc="main_developer">Main developer</span></h3> VLADOS776
             <br>
             <ul>
                 <li><b>Steam</b>: <a href="https://steamcommunity.com/id/vanushka2004" target="_blank">vanushka2004</a></li>
                 <li><b>Email</b>: kurtukovvlad@gmail.com</li>
                 <li><b>Patreon</b>: <a href="https://www.patreon.com/VLADOS776" target="_black">VLADOS776</a></li>
-            </ul> <span id='local-1'>Если Вы обнаружили ошибки, или у Вас есть предложение, напишите на почту.</span>
-            <br> <span id='local-2'>Если хотите поблагодарить разработчика, можете подарить что-нибудь в стиме :)</span>
-            <br> <span id='local-3'>Не забудьте поставить оценку в маркете ^_^</span>
-            <h3><span id='special-thanks'>Особая благодарность</span></h3>
+            </ul> <span data-loc="info">If you found some bugs or you have a suggestion you can write me an email.<br>If you want to thank the developer you can send something in Steam :)<br>Do not forget to rate the app in the Play Market ^_^</span>
+            <h3><span data-loc="special_thanks">Special Thanks</span></h3>
             <ul>
                 <li>Death Reaper</li>
                 <li>misha4burn</li>
                 <li>Sinon</li>
             </ul>
             <div id='other-links-container'>
-            <h3><span id='other-links'>Ссылки</span></h3>
+            <h3><span>Ссылки</span></h3>
             <ul>
                 <li><a href='https://vk.com/vlados776opencase'>Группа по симулятору #1</a></li>
                 <li><a href='https://vk.com/opencaseru'>Группа по симулятору #2</a></li>
                 <li><a href='https://vk.com/game_zara'>Game - Жара</a></li>
             </ul>
                 </div>
-            <h3><span id='copyright'>Авторские права</span></h3>
-            <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
+            <h3><span data-loc="copyright">Copyright</span></h3>
+            <p data-loc="copyright_info">Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
             <p id='secret' style='display:none'> <a href='spinking.html'>Spinking</a>
                 <br> <a href='crash-Online.html'>Crash Online!</a>
                 <br> </p>
         </div>
     </div>
     <script>
+        if (Settings.language != "RU") $('#other-links-container').hide();
         if (Player.nickname == 'VLADOS776') $("#secret").css('display', 'block')
     </script>
 </body>
