--- a/OpenCase_Beta/RUS/double-Online.html
+++ b/OpenCase_Beta/RUS/double-Online.html
@@ -41,7 +41,7 @@
 <div id="container">
 <div class="navigationBar" data-menu-EN="Double Online" data-menu-RU="Дабл онлайн"></div>
 <div class='onlineCount'></div>
-<span id='last_games_text' class='margin-left-body'>Previous numbers:</span>
+<span id='last_games_text' class='margin-left-body' data-loc="previous_numbers">Previous numbers:</span>
 <div class='last-games'></div>
 
 <div class="scrollerContainer">
@@ -52,11 +52,11 @@
 	</div>
 </div>
 <div class='progress big-progress'>
-	<span>Roling in</span>
+	<span data-loc="pollign_in">Roling in</span>
 	<div class='progress-bar' id='progress-countdown'></div>
 </div>
-<span id='balance-text' class='margin-left-body'>Balance:</span> <span id='balance'>0</span>
-<div class='button' id='fillBalance'>Fill up balance</div>
+<span id='balance-text' class='margin-left-body' data-loc="balance">Balance:</span> <span id='balance'>0</span>
+<div class='button' id='fillBalance' data-loc="fill_up_balance">Fill up balance</div>
 <div class="bets">
 <span class='add-to-bet' data-bet='clear'>0</span><span data-bet='1' class='add-to-bet'>+1</span><span data-bet='10' class='add-to-bet'>+10</span><span data-bet='100' class='add-to-bet'>+100</span><span data-bet='1000' class='add-to-bet'>+1000</span><span data-bet='1/2' class='add-to-bet'>1/2</span><span data-bet='x2' class='add-to-bet'>x2</span><span data-bet='max' class='add-to-bet'>Max</span>
 </div>
@@ -78,14 +78,14 @@
 	</td></tr>
 </table>
 
-<div class='chat closed'>
-    <div class='chat__toggle'>Chat (<span class='chat__toggle__new-messages'>0</span>)</div>
+<div class='chat closed' data-loc-group="chat">
+    <div class='chat__toggle'><span data-loc="top">Chat</span> (<span class='chat__toggle__new-messages'>0</span>)</div>
     <ul class='chat__messages'>
-        <li class='chat__message__message info'>Welcome to chat!</li>
+        <li class='chat__message__message info' data-loc="welcome">Welcome to chat!</li>
     </ul>
     <div class='chat__new-message'>
         <div class="chat__new-message__textbox input-text light" contenteditable="true" placeholder="Send message" max="100"></div>
-        <button class="button_blue" id='chat-send-msg'>Send</button>
+        <button class="button_blue" id='chat-send-msg' data-loc="send">Send</button>
     </div>
 </div>
 
