--- a/OpenCase_Beta/RUS/faq.html
+++ b/OpenCase_Beta/RUS/faq.html
@@ -55,45 +55,49 @@
 		<div id='container'>
 		<div class="navigationBar" data-menu-EN="FAQ" data-menu-RU="FAQ"></div>
 			<ul class='faq-list'>
-				<li>
-					<span class='question' id='js-local-question-1'>Как играть в рулетку?</span>
-					<span class='answer' id='js-local-answer-1'>Максимальное число предметов, которые можно добавить: 15.<br> Максимальная стоимость - неограничена.<br>Игра начинается как только набирается 50 предметов.<br>Если вы добавили предметы и вышли из рулетки - предметы пропадают.</span>
+				<li data-loc-group="how_to_play_jackpot">
+					<span class='question' id='js-local-question-1' data-loc="title">How to play Jackpot?</span>
+					<span class='answer' id='js-local-answer-1' data-loc="info">The max number of weapons that you can add: 15.<br>Maximum price is unlimited.<br>The game will begin after 50 weapons are collected.<br>If you add weapons and close the jackpot, weapons will disappear.</span>
 				</li>
-				<li>
-					<span class='question' id='js-local-question-2'>Почему цена предмета $0?</span>
-					<span class='answer' id='js-local-answer-2'>Цена предмета берется из базы. Если в базе нет цены, берётся с Торговой площадки стима. Если и там нет, тогда $0.<br>Если в стиме появился этот предмет, а у вас в инвентаре до сих пор цена $0 - откройте описание предмета, подождите пока загрузиться цена, закройте описание предмета и перезайдите в инвентарь.</span>
+				<li data-loc-group="why_no_price">
+					<span class='question' id='js-local-question-2' data-loc="title">Why weapon price is $0?</span>
+					<span class='answer' id='js-local-answer-2' data-loc="info">Weapons prices are taken from the database. If there are no prices for current weapon, then price is taken from the Steam Market. If there is no price as well, it counts as $0. <br> When the weapon appears in market, open the weapon info in inventory, wait until the price is loaded, reopen inventory.</span>
 				</li>
-				<li>
-					<span class='question' id='js-local-question-trade'>Как обмениваться предметами?</span>
-					<span class='answer' id='js-local-answer-trade'>Для начала необходимо включить обмен в настройках.<br><b>Как отправить предложение обмена</b><br>
+				<li data-loc-group="how_to_exchange">
+					<span class='question' id='js-local-question-trade' data-loc="title">Как обмениваться предметами?</span>
+					<span class='answer' id='js-local-answer-trade' data-loc="info">First of all, you need to enable "Exchange" in settings.<br><b>How to send the trade offer</b><br>
                         <ol>
-                            <li>Откройте профиль другого игрока (он тоже должен включить обмен в настройках)</li>
-                            <li>Нажмите на значок обмена (<i class="fa fa-exchange" aria-hidden="true"></i>)</li>
-                            <li>Выберите оружие, которое хотите отправить игроку и нажмите "Далее"</li>
-                            <li><s>Выберите оружие, которое хотите получить от игрока и нажмите "Далее"</s> (На данный момен просмотр инвентаря другого игрока невозможен)</li>
-                            <li>Если вы хотите подарить эти предметы (и ничего не получить взамен), поставьте галочку напротив строки "Это подарок".</li>
-                            <li>Нажмите кнопку "Отправить обмен"</li>
+                            <li>Open another player profile</li>
+                            <li>Press on the exchange icon (<i class="fa fa-exchange" aria-hidden="true"></i>)</li>
+                            <li>Select the weapons that you want to send and press on the "Next" button</li>
+                            <li><s>Select the weapons that you want to get from player</s> (WIP)</li>
+                            <li>If you want to send weapons as a gift then check "It\'s a gift" checkbox</li>
+                            <li>Press on the "Send trade" button</li>
                         </ol>
-                        <b>Как получить предметы</b>
+                        <b>How to get weapons</b>
                         <ol>
-                            <li>Откройте свой профиль</li>
-                            <li>Нажмите на значок обмена (<i class="fa fa-exchange" aria-hidden="true"></i>)</li>
-                            <li>Из списка выберите игрока, с которым хотите обменяться предметами (если нажать на его аватарку, можно открыть его профиль)</li>
-                            <li>Выберите нужный трейд</li>
-                            <li>Добавьте свои предметы</li>
-                            <li>Когда будете готовы, поставьте галочку напротив поля "Отметьте, когда будете готовы к обмену"</li>
-                            <li>Подождите пока другой игрок тоже поставит галочку и нажмите кнопку "Совершить обмен". Или её может нажать другой игрок.</li>
+                            <li>Open your profile</li>
+                            <li>Press on the exchange icon (<i class="fa fa-exchange" aria-hidden="true"></i>)</li>
+                            <li>Select the player that send the offer to you</li>
+                            <li>Select the offer</li>
+                            <li>Change your offer if you want</li>
+                            <li>Check the "Check this box when ready to trade." checkbox</li>
+                            <li>Wait until another player check this checkbox too and press on the "Make trade" button. Or another player can press it</li>
                         </ol>
-                        Если другой игрок нажал кнопку "Совершить обмен", когда вы были не в окне обмена, откройте этот трейд, чтобы получить предметы.
+                        If another player pressed the "Make trade" button when you was offline then open this trade to get your weapons.'
                     </span>
 				</li>
-				<li>
-					<span class='question' id='js-local-question-rank'>Как поднять ранг?</span>
-					<span class='answer' id='js-local-answer-rank'>Чтобы повысить ранг, нужно заработать очки. Очки, даются за следующие действия:<ul><li>Открыть приложение — <i class='js-var' data-var='DAILY_REWARD_POINTS'></i> очков (награда даётся раз в день)</li><li>Открыть кейс — <i class='js-var' data-var='OPEN_CASE_REWARD_POINTS'></i> очко</li><li>Победить в мини-игре — <i class='js-var' data-var='GAME_WIN_REWARD_POINTS'></i> очка</li></ul></span>
+				<li data-loc-group="how_to_level_up">
+					<span class='question' id='js-local-question-rank' data-loc="title">How to level up?</span>
+					<span class='answer' id='js-local-answer-rank' data-loc="info" data-loc-var='{"1":5,"2":1,"3":2}'>For increasing your level you need points. Points are given for the following steps:<ul>
+                        <li>Open the app - ${1} points (award is given once a day)</li>
+                        <li>Open one case - ${2} point</li>
+                        <li>Won in the mini-game - ${3} points</li>
+                    </li></ul></span>
 				</li>
-				<li>
-					<span class='question' id='js-local-question-3'>Я нашел ошибку, что делать?</span>
-					<span class='answer' id='js-local-answer-3'>Срочно пишите на почту: <b>kurtukovvlad@gmail.com</b></span>
+				<li data-loc-group="found_bug">
+					<span class='question' id='js-local-question-3' data-loc="title">I found a bug what should I do?</span>
+					<span class='answer' id='js-local-answer-3' data-loc="info">You can contact me via email: kurtukovvlad@gmail.com</span>
 				</li>
 			</ul>
 		</div>
