--- a/OpenCase_Beta/RUS/rulet.html
+++ b/OpenCase_Beta/RUS/rulet.html
@@ -50,13 +50,13 @@
 <div class="win"></div>
 <div id="players"></div>
 <div class='buttons'>
-	<button id="addItems">Внести предметы</button>
-	<select id="diffuculty">
-		<option value="1" data-min="0.1" data-max="5" id='local-dif-easy-peasy'>Очень легко $0.1 - $5</option>
-		<option value="2" data-min="5" data-max="30" id='local-dif-easy'>Легко $5 - $30</option>
-		<option value="3" data-min="30" data-max="80" id='local-dif-normal'>Нормально $30 - $80</option>
-		<option value="4" data-min="80" data-max="200" id='local-dif-hard'>Сложно $80 - $200</option>
-		<option value="5" data-min="200" data-max="5000000" id='local-dif-legendary'>Легендарно $200 - $∞</option>
+	<button id="addItems" data-loc="add_items">Add Items</button>
+	<select id="diffuculty" data-loc-group="difficulty">
+		<option value="1" data-min="0.1" data-max="5" data-loc='1'>Easy peasy $0.1 - $5</option>
+		<option value="2" data-min="5" data-max="30" data-loc='2'>Easy $5 - $30</option>
+		<option value="3" data-min="30" data-max="80" data-loc='3'>Normal $30 - $80</option>
+		<option value="4" data-min="80" data-max="200" data-loc='4'>Hard $80 - $200</option>
+		<option value="5" data-min="200" data-max="5000000" data-loc='5'>Legendary $200 - $∞</option>
 	</select>
 </div>
 <ul class="items"></ul>
@@ -66,7 +66,7 @@
 <span id="intentory-Player"></span>
 <div class="closeInventory"></div>
 <ul class="inventory inv-price-counter"></ul>
-<button class="choseItems">Внести</button>
+<button class="choseItems" data-loc="choose_items">Add selected</button>
 </div>
 
 </div>
