--- a/OpenCase_Beta/RUS/settings.html
+++ b/OpenCase_Beta/RUS/settings.html
@@ -217,50 +217,48 @@ div#avatar {
 <body data-localization='settings'>
   <div class="site-overlay"></div>
   <div id="container">
-<div class="navigationBar" data-menu-EN="Settings" data-menu-RU="Настройки"></div>
+<div class="navigationBar"></div>
 <div class='settings'>
 <div id='code'>
 	<input type='text' id='code-input' placeholder='Code...'><button id='code-confirm'>Activate</button>
 </div>
-<div class='option-block'>
-	<span class='option-block__name' id='local-profile'>Профиль</span>
-	<div class='option'><span id='local-name'>Ваше имя</span>
+<div class='option-block' data-loc-group="profile">
+	<span class='option-block__name' data-loc="group_title">Profile</span>
+	<div class='option'><span data-loc="nick">Your name</span>
 		<input type="text" id="nickname" size="20" />
 	</div>
-	<div class='option'><span id='local-avatar'>Аватарка:</span>
+	<div class='option'><span data-loc="avatar">Avatar</span>
 		<div id="avatar">
 		</div >
 	</div>
 </div>
-<div class='option-block'>
-	<span class='option-block__name' id='local-beta'>Экспериментальные функции</span>
-	<div class='option inline'><span id='local-beta_trade'>Обмен оружием с игроками</span>
+<div class='option-block' data-loc-group="beta">
+	<span class='option-block__name' id='local-beta' data-loc="group_title">Beta</span>
+	<div class='option inline'><span data-loc="exchange">Exchange</span>
 		<label class='switch-label'>
 			<input type="checkbox" name='trades' class='hide' />
 			<div class='switch' data-target='switch-trades'></div>
 		</label>
 	</div>
 </div>
-<div class='option-block'>
-	<span class='option-block__name' id='local-local'>Интерфейс</span>
+<div class='option-block' data-loc-group="interface">
+	<span class='option-block__name' data-loc="group_title">Interface</span>
 	<div class='option'>
-		<span id='local-language'>Язык</span>
+		<span data-loc="language">Language</span>
 		<div class="dropdown">
 			<select class="dropdown-select" id="language">
-				<option value="EN">English</option>
-				<option value="RU">Русский</option>
 			</select>
 		</div>
 	</div>
 	<div class='option inline'>
-		<span id='local-sounds'>Звуки</span>
+		<span data-loc="sound">Sound</span>
 		<label class='switch-label'>
 			<input type="checkbox" name='sounds' class='hide' />
 			<div class='switch' data-target='switch-sound'></div>
 		</label>
 	</div>
 	<div class='option inline'>
-		<span id='local-drop'>Быстрый дроп с кейсов</span>
+		<span data-loc='fast_drop'>Fast drop (x2)</span>
 		<label class='switch-label'>
 			<input type="checkbox" name='drop' class='hide' />
 			<div class='switch' data-target='switch-drop'></div>
@@ -268,9 +266,9 @@ div#avatar {
 	</div>
 </div>
 <p>
-<button id='reset' class='Button' value='Reset'>Полный сброс</button>
+<button id='reset' class='Button' value='Reset' data-loc="reset">Full reset</button>
 <hr>
-<button id="submit" class="Button" value="Сохранить">Сохранить</button>
+<button id="submit" class="Button" value="Сохранить" data-loc="save">Save</button>
 </p>
 </div>
 </div>
@@ -278,6 +276,10 @@ div#avatar {
 var iconSelect;
 
 $(function() {
+    /* Languages */
+    for (var i = 0; i < Localization.supportedLanguages.names.full.length; i++) {
+        $('#language').append('<option value="' + Localization.supportedLanguages.names.short[i]+'">'+Localization.supportedLanguages.names.full[i] + '</option>')
+    }
 	/*Ava*/
 	iconSelect = new IconSelect("avatar", {
 		"selectedIconWidth":80,
@@ -352,17 +354,20 @@ $("#submit").on("click", function() {
 			width: $(window).width(),
 			position: 'top center',
 			icon: false,
-			title: Localization.settings2.notValidNicknameTitle[Settings.language],
+			title: Localization.getString('settings.notification.invalid_nick_title'),
 			delay: 4000,
 			size: 'mini',
 			showClass: 'fadeInDown',
 			hideClass: 'fadeOutUp',
-			msg: Localization.settings2.notValidNickname[Settings.language]
+			msg: Localization.getString('settings.notification.invalid_nick')
 		});
 		return false;
 	}
 	var lang = $('#language option:selected').val();
-		saveStatistic('settings_language', lang);
+    saveStatistic('settings_language', lang);
+    
+    if (Settings.language != lang)
+        Localization.changeLanguage(lang);
 	saveStatistic('settings_sounds', $('input[name="sounds"]').prop('checked'));
 	saveStatistic('settings_drop', $('input[name="drop"]').prop('checked'));
     
@@ -371,7 +376,6 @@ $("#submit").on("click", function() {
     } catch(e) {}
 
 	Settings.language = lang;
-	localizate('settings');
 
 	Lobibox.notify('info', {
 			pauseDelayOnHover: false,
@@ -379,20 +383,20 @@ $("#submit").on("click", function() {
 			width: $(window).width(),
 			position: 'top center',
 			icon: false,
-			title: Localization.settings2.notificationTitle[Settings.language],
+			title: Localization.getString('settings.notification.title'),
 			delay: 2000,
 			size: 'mini',
 			showClass: 'fadeInDown',
 			hideClass: 'fadeOutUp',
-			msg: Localization.settings2.saved[Settings.language]
+			msg: Localization.getString('settings.notification.saved')
 		});
 });
 
 $('#reset').on('click', function () {
 	Lobibox.confirm({
 		iconSource : 'fontAwesome',
-		title : Localization.settings2.resetQuestionTitle[Settings.language],
-		msg : Localization.settings2.resetQuestion[Settings.language],
+		title : Localization.getString('settings.notification.reset_confirm_title'),
+		msg : Localization.getString('settings.notification.reset_confirm'),
 		callback : function ($tihs, type, ev) {
 			if (type == 'yes') {
 				if (isAndroid()) {
@@ -409,12 +413,12 @@ $('#reset').on('click', function () {
 					width : $(window).width(),
 					position : 'top center',
 					icon : false,
-					title : Localization.settings2.resetQuestionTitle[Settings.language],
+					title : Localization.getString('settings.notification.reset_confirm_title'),
 					delay : 2000,
 					size : 'mini',
 					showClass : 'fadeInDown',
 					hideClass : 'fadeOutUp',
-					msg : Localization.settings2.resetDone[Settings.language]
+					msg : Localization.getString('settings.notification.reset_done')
 				});
 			}
 		}
