--- a/OpenCase_Beta/RUS/statistic.html
+++ b/OpenCase_Beta/RUS/statistic.html
@@ -63,22 +63,22 @@ tr:nth-child(2n) {
 	<div id="container">
 <div class="navigationBar" data-menu-EN="Statistic" data-menu-RU="Статистика"></div>
 <table>
-<tr><td id="caseOpened-text">Количество открытых кейсов: </td><td id="caseOpened"></td></tr>
-<tr><td id="stattrak-text">StatTrak: </td><td id="stattrak"></td></tr>
-<tr><td id="white-text">Белые:</td><td id="white"></td></tr>
-<tr><td id="industrial-text">Светло-синие:</td><td id="industrial"></td></tr>
-<tr><td id="blue-text">Синие:</td><td id="blue"></td></tr>
-<tr><td id="restricted-text">Фиолетовые:</td><td id="restricted"></td></tr>
-<tr><td id="classified-text">Розовые:</td><td id="classified"></td></tr>
-<tr><td id="covert-text">Красные:</td><td id="covert"></td></tr>
-<tr><td id="knife-text">Ножи: </td><td id="knife"></td></tr>
-<tr><td id="contract-text">Контракты обмена: </td><td id="contract"></td></tr>
-<tr><td id="rulet-text">Рулетка выиграно/проиграно: </td><td id="rulet"></td></tr>
-<tr><td id="rulet-max-win-text">Максимальный выигрыш в рулетке: </td><td id="rulet-max-win"></td></tr>
-<tr><td id="rps-text">Камень-ножницы-бумага выиграно/проиграно: </td><td id="rps"></td></tr>
-<tr><td id="coinflip-text">Монетка выиграно/проиграно: </td><td id="coinflip"></td></tr>
-<tr><td id="coinflip-max-win-text">Максимальный выигрыш в монетке: </td><td id="coinflip-max-win"></td></tr>
-<tr><td id="double-text">Дабл выиграно/проиграно: </td><td id="double"></td></tr>
+<tr><td id="caseOpened-text" data-loc="total_opened">Total cases opened</td><td id="caseOpened"></td></tr>
+<tr><td id="stattrak-text" data-loc="stattrak">StatTrak</td><td id="stattrak"></td></tr>
+<tr><td id="white-text" data-loc="white">White</td><td id="white"></td></tr>
+<tr><td id="industrial-text" data-loc="light_blue">Light-blue</td><td id="industrial"></td></tr>
+<tr><td id="blue-text" data-loc="blue">Blue</td><td id="blue"></td></tr>
+<tr><td id="restricted-text" data-loc="purpule">Purpule</td><td id="restricted"></td></tr>
+<tr><td id="classified-text" data-loc="pink">Pink</td><td id="classified"></td></tr>
+<tr><td id="covert-text" data-loc="red">Red</td><td id="covert"></td></tr>
+<tr><td id="knife-text" data-loc="gold">Knives/Gloves</td><td id="knife"></td></tr>
+<tr><td id="contract-text" data-loc="contracts">Trade up contracts</td><td id="contract"></td></tr>
+<tr><td id="rulet-text" data-loc="jackpot_win_lose">Jackpot win/lose</td><td id="rulet"></td></tr>
+<tr><td id="rulet-max-win-text" data-loc="jackpot_max">Jackpot max money won</td><td id="rulet-max-win"></td></tr>
+<tr><td id="rps-text" data-loc="rps_win_lose">Rock-Paper-Scissors win/lose</td><td id="rps"></td></tr>
+<tr><td id="coinflip-text" data-loc="coinflip_win_lose">Coinflip win/lose</td><td id="coinflip"></td></tr>
+<tr><td id="coinflip-max-win-text" data-loc="coinflip_max">Coinflip max money won</td><td id="coinflip-max-win"></td></tr>
+<tr><td id="double-text" data-loc="double_win_lose">Double win/lose</td><td id="double"></td></tr>
 </table>
 <!--<div class='buttons-div'>
 	<a href='ranks.html' class='button'>Ранги</a>
