[Beta] Christmas Case

--- a/OpenCase_Beta/RUS/open.html
+++ b/OpenCase_Beta/RUS/open.html
@@ -43,7 +43,7 @@
 <span class="win_price"></span>
 <img src="" class="win_img">
 <div class="win_sell_div">
-	<h3 id="win_sell_text" class="lines" data-loc="sell"><span>Sell</span></h3>
+	<h3 id="win_sell_text" class="lines"><span data-loc="sell">Sell</span></h3>
     <button class="button_glass" id="double_sell_button"></button>
 </div>
 </div>
