--- a/OpenCase/RUS/settings.html
+++ b/OpenCase/RUS/settings.html
@@ -192,7 +192,7 @@ div#avatar {
     color: #b6b6b6;
     margin: 3px 5px;
     width: calc(100% - 10px);
-    font-family: Lato;
+    font-family: LatoRegular;
     font-weight: 900;
     border: 1px solid RGBA(0, 0, 0, 0.4);
     border-bottom: 1px solid rgba(255, 255, 255, 0.05);
@@ -204,7 +204,7 @@ div#avatar {
     background: #c5e1ef;
     border: 1px solid RGBA(0, 0, 0, 0.4);
     height: 30px;
-    font-family: Lato;
+    font-family: LatoRegular;
     font-weight: Bolder;
     color: #1a8198;
     border-radius: 0 5px 5px 0;
