[Beta] Settings code activation

--- a/OpenCase_Beta/RUS/settings.html
+++ b/OpenCase_Beta/RUS/settings.html
@@ -440,7 +440,7 @@ function deleteAllCookies() {
 	}
 }
 
-$(document).on('click', '#local-local', function() {
+$(document).on('click', '.option-block[data-loc-group="interface"]', function() {
 	$('#code').toggle('slow');
 })
 
