--- a/OpenCase_Beta/RUS/inventory.html
+++ b/OpenCase_Beta/RUS/inventory.html
@@ -91,6 +91,7 @@
 	</div>
 
 	<script>
+        checkInventoryForUpdate();
 		$(window).load(function() {
 			getInventory(1, 50)
             .then(function(result) {
@@ -121,7 +122,7 @@
         })
         
         var qualitySort = [
-            " ",
+            "*",
             "consumer",
             "industrial",
             "milspec",
@@ -376,7 +377,7 @@
                     sortedInventory = sortInventory(sortedInventory, "type", RegExp(weaponsSort[parseInt(weapon)]))
                 }
                 if (parseInt(quality) != 0) {
-                    sortedInventory = sortInventory(sortedInventory, "rarity", qualitySort[parseInt(quality)])
+                    sortedInventory = sortInventory(sortedInventory, "rarity", RegExp(qualitySort[parseInt(quality)]))
                 }
                 return {
                     weapons: sortedInventory,
@@ -523,6 +524,20 @@
                     checkForLoadMore();
 			}
 		}
+        
+        function checkInventoryForUpdate() {
+            //if (!isAndroid()) return false;
+            debugger;
+            getInventory()
+            .then(function(result) {
+                var wpns = result.weapons;
+                for (var i = 0; i < wpns.length; i++) {
+                    if (wpns[i].item_id == "" && wpns[i].quality == "" && wpns[i].extra != "") {
+                        console.log('feff')
+                    }
+                }
+            })
+        }
 	</script>
 </body>
 </html>
