[Beta] Инвентарь + Монетка

--- a/OpenCase_Beta/RUS/coinflip.html
+++ b/OpenCase_Beta/RUS/coinflip.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Монетка</title>
+<meta charset="UTF-8">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/inventory-portable.css">
@@ -10,24 +11,6 @@
 <link rel="stylesheet" type="text/css" href="../css/coinflip.css">
 <link rel="stylesheet" type="text/css" href="../css/loading.css">
 <link rel="stylesheet" type="text/css" href="../css/winter.css">
-
-<script src="../scripts/build/libs.js"></script>
-<script src="../scripts/main.js"></script>
-<script src="../scripts/settings.js"></script>
-<script src="../scripts/weapons.js"></script>
-<script src="../scripts/skinNames.js"></script>
-<script src="../scripts/cases2.js"></script>
-<script src="../scripts/quality.js"></script>
-<script src="../scripts/prices.js"></script>
-<script src="../scripts/inventory.js"></script>
-<script src="../scripts/jackpotBots.js"></script>
-
-<script src="../scripts/navigationMenu.js"></script>
-<link rel="stylesheet" href="../css/navigationMenu.css">
-<script src="../scripts/coinflip.js"></script>
-
-<script src="../scripts/localization.js"></script>
-
 </head>
 <body data-localization='coinflip'>
 	<div class="site-overlay"></div>
@@ -83,5 +66,26 @@
 				</div>
 			</div>
 		</div>
+<script src="../scripts/build/libs.js"></script>
+<script src="../scripts/main.js"></script>
+<script src="../scripts/settings.js"></script>
+<script src="../scripts/weapons.js"></script>
+<script src="../scripts/skinNames.js"></script>
+<script src="../scripts/cases2.js"></script>
+<script src="../scripts/quality.js"></script>
+<script src="../scripts/prices.js"></script>
+<script src="../scripts/inventory.js"></script>
+<script src="../scripts/jackpotBots.js"></script>
+
+<script src="../scripts/navigationMenu.js"></script>
+<link rel="stylesheet" href="../css/navigationMenu.css">
+<script src="../scripts/coinflip.js"></script>
+
+<script src="../scripts/localization.js"></script>
+    <script>
+        $(document).on('localizationloaded', function() {
+            CoinFlip.init();
+        })
+    </script>
 </body>
 </html>
