[Beta] Promise Polyfill #2

--- a/OpenCase_Beta/RUS/RPS.html
+++ b/OpenCase_Beta/RUS/RPS.html
@@ -25,7 +25,7 @@
 <link rel="stylesheet" href="../css/navigationMenu.css">
 
 <script src="../scripts/localization.js"></script>
-
+<script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 </head>
 <body data-localization='rps'>
 <div class="site-overlay"></div>
