--- a/OpenCase_Beta/RUS/double-Online.html
+++ b/OpenCase_Beta/RUS/double-Online.html
@@ -31,7 +31,7 @@
 <script src="../scripts/localization.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
-
+<script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 <script src="../scripts/games/doubleOnline.js"></script>
 <script src="../scripts/games/online-games.js"></script>
 </head>
