--- a/OpenCase_Beta/RUS/double.html
+++ b/OpenCase_Beta/RUS/double.html
@@ -31,6 +31,7 @@
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 
 <script src="../scripts/games/double.js"></script>
+<script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 <!-- <script src="../scripts/min/double.js"></script> -->
 </head>
 
