--- a/OpenCase_Beta/RUS/inventory.html
+++ b/OpenCase_Beta/RUS/inventory.html
@@ -22,6 +22,7 @@
 	<script src="../scripts/skinNames.js"></script>
 	<script src="../scripts/prices.js"></script>
 	<script src="../scripts/quality.js"></script>
+    <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 
 	<script src="../scripts/navigationMenu.js"></script>
 
