--- a/OpenCase_Beta/RUS/spinking.html
+++ b/OpenCase_Beta/RUS/spinking.html
@@ -24,6 +24,7 @@
 <!-- <script src="../scripts/inventory.js"></script> -->
 <script src="../scripts/build/common.js"></script>
 <script src="../scripts/build/spinking.js"></script>
+<script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
