--- a/OpenCase_Beta/RUS/coinflip.html
+++ b/OpenCase_Beta/RUS/coinflip.html
@@ -76,6 +76,7 @@
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/inventory.js"></script>
 <script src="../scripts/jackpotBots.js"></script>
+    <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
