--- a/OpenCase_Beta/RUS/market.html
+++ b/OpenCase_Beta/RUS/market.html
@@ -23,6 +23,7 @@
 <script src="../scripts/quality.js"></script>
 <script src="../scripts/prices.js"></script>
 <script src="../scripts/inventory.js"></script>
+<script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
