--- a/OpenCase_Beta/RUS/profile.html
+++ b/OpenCase_Beta/RUS/profile.html
@@ -31,6 +31,7 @@
     <link rel="stylesheet" href="../css/navigationMenu.css">
     <script src="../scripts/localization.js"></script>
     <script src="../scripts/inventory.js"></script>
+    <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
 </head>
 
 <body data-localization='profile'>
